--- a/image0.html
+++ b/image0.html
@@ -4,6 +4,6 @@
     <title>My Webpage!</title>
   </head>
   <body>
-    <img src="kaira1.jpg" height="600" width="400">
+    <img src="kaira1.jpg" height="75%" width="40%">
   </body>
 </html>
